[package]
name = "ip2pcore"
version = "0.1.0"
edition = "2021"

[dependencies]
webrtc = "0.11.0"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros", "signal"] }
anyhow = "1.0"
env_logger = "0.11.3"
chrono = "0.4.38"
log = "0.4.22"
serde_json = "1.0.120"
base64 = "0.22.1"
hyper = "1.4.1"
clap = "4.5.9"